Change main config file location in pillar.example
This change was left out of commit 4c900fc.

--- a/pillar.example
+++ b/pillar.example
@@ -1,7 +1,7 @@
 # -*- mode: yaml -*-
 netdata:
   service: netdata
-  conf_file: /etc/netdata/netdata.conf
+  conf_file: /opt/netdata/etc/netdata/netdata.conf
   config:
     global:
       hostname: myhost
